<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menua">


    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:contentDescription="@string/scrollView"
        android:paddingBottom="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:background="@color/black"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="66dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewSalduenak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/salduenak" />

            <ImageView
                android:id="@+id/imageViewProba"
                android:layout_width="match_parent"
                android:layout_height="87dp"
                android:src="@drawable/logo" />

            <Button
                android:id="@+id/btnSaioaHasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <TextView
                android:id="@+id/textViewProduktuak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/produktuak"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/spinnerProduktuak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/spinner"
                android:minHeight="48dp" />

            <LinearLayout
                android:id="@+id/linearLayoutProduktuak"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:orientation="vertical" >


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>